# factory-mcp

./: .env.example  .gitignore  CLAUDE.md  README.md  config.py  mcp_server.py  pyproject.toml  requirements.txt  setup.sh
db/: connection.py  schema.sql  schema_oracle.sql  seed.py
db/backends/: __init__.py  base.py  oracle.py  sqlite.py
docs/: MANUAL.md
open-webui/: docker-compose.yml  factory_followup.py  model_preset.json  saved_prompts.json
tools/: __init__.py  analytics.py  defect.py  equipment.py  production.py
